--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
       /* Radio button styles */
       .radio-group {
         /* margin-top: 15px; */
-        padding: 10px;
+        display: flex;
+        gap: 24px;
+        padding: 4px 10px;
         background-color: #f5f5f5;
         border-radius: 4px;
         border: 1px solid #ccc;
