--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <!--------------------------------------- Inline-CSS -------------------------------------->
 
     <style>
       * {
         margin: 0;
         padding: 0;
-        font-family: "Arial", sans-serif;
+        font-family: "Roboto", sans-serif;
       }
 
       body {
-        /* background-color: #ffffff; */
         height: 100%;
       }
 
@@ -67,6 +73,8 @@
       }
 
       .sidebar h2 {
+        font-size: 32px;
+        font-weight: 300;
         color: #e31e2a;
         position: sticky;
         top: 0;
@@ -78,7 +86,6 @@
 
       .main {
         margin-top: 75px;
-
         width: 50%;
         display: flex;
         flex-direction: column;
@@ -107,7 +114,7 @@
         border: none;
         text-align: left;
         cursor: pointer;
-        font-size: 16px;
+        font-size: 14px;
         border-radius: 4px;
         transition: all 0.3s;
         font-weight: bold;
@@ -134,6 +141,7 @@
 
       .dropdown-content {
         display: none;
+        font-size: 14px;
         background-color: #ffffff;
         padding: 10px;
         border-radius: 4px;
@@ -185,10 +193,10 @@
       }
 
       .qr-title {
-        font-size: 24px;
+        font-size: 34px;
         margin-bottom: 10px;
         color: #e31e2a;
-        font-weight: 500;
+        font-weight: 300;
       }
 
       .instructions {
@@ -198,7 +206,7 @@
       }
 
       h2 {
-        color: #1a237e;
+        color: #1967d2;
         margin-bottom: 15px;
         border-bottom: 2px solid #ccc;
         padding-bottom: 10px;
@@ -251,6 +259,8 @@
       /* Radio button styles */
       .radio-group {
         /* margin-top: 15px; */
+        font-size: 14px;
+
         display: flex;
         gap: 24px;
         padding: 4px 10px;
@@ -330,6 +340,8 @@
             <label for="bs6">BS6 Vehicle</label>
           </div>
         </div>
+
+        <!-- Dropdown Code -->
 
         <div class="dropdown">
           <button class="dropdown-btn">
@@ -657,7 +669,7 @@
                 },
                 {
                   name: "Plush New XUV500_MT W5,W7,W9,W11",
-                  url: "https://owner-manual.withyouhamesha.com/manuals/plush-new-XUV500-MT/plush-new-XUV500-AT.html",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/plush-new-XUV500-MT/plush-new-XUV500-MT.html",
                   title: "Plush New XUV500_MT W5,W7,W9,W11 Owner Manual",
                 },
                 {
@@ -697,17 +709,17 @@
               submodels: [
                 {
                   name: "BOLERO ZLX, SLX, SLE, LX",
-                  url: "https://owner-manual.withyouhamesha.com/manuals/bolero/bolero.html",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/BOLERO-ZLX-SLX-SLE-LX/owners-manual-BOLERO-ZLX-SLX-SLE-LX.html",
                   title: "BOLERO ZLX, SLX, SLE, LX Owner Manual",
                 },
                 {
                   name: "Bolero ZLX",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#bolero-zlx",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/BOLERO-ZLX/owners-manual-BOLERO-ZLX.html",
                   title: "Bolero ZLX Owner Manual",
                 },
                 {
                   name: "Bolero Power Plus",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#bolero-power-plus",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/BoleroPower%2B/index.html",
                   title: "Bolero Power Plus Owner Manual",
                 },
               ],
@@ -719,12 +731,12 @@
             },
             {
               name: "Marazzo",
-              url: "https://www.withyouhamesha.com/owners-manual.aspx#marazzo-bs4",
+              url: "https://owner-manual.withyouhamesha.com/manuals/MARAZZO/index.html",
               title: "Marazzo Owner Manual",
             },
             {
               name: "Alturas G4",
-              url: "https://www.withyouhamesha.com/owners-manual.aspx#alturas-g4-bs4",
+              url: "https://owner-manual.withyouhamesha.com/manuals/alturasg4/index.html",
               title: "Alturas G4 Owner Manual",
             },
           ],
@@ -736,7 +748,7 @@
           BS4: [
             {
               name: "Bolero",
-              url: "https://www.withyouhamesha.com/owners-manual.aspx#bolero",
+              url: "https://owner-manual.withyouhamesha.com/manuals/BOLERO/Bolero-Owner-Manual.html",
               title: "Bolero Owner Manual",
             },
             {
@@ -764,17 +776,17 @@
               submodels: [
                 {
                   name: "e Verito",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#e-verito",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/everito/owners-manual-E-VERITO.html",
                   title: "e Verito Owner Manual",
                 },
                 {
                   name: "Verito Vibe",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#verito-vibe",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/Verito-Vibe/owners-manual-verito-vibe.html",
                   title: "Verito Vibe Owner Manual",
                 },
                 {
                   name: "Verito Sedan",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#verito-sedan",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/Verito-Sedan/owners-manual-verito-sedan.html",
                   title: "Verito Sedan Owner Manual",
                 },
               ],
@@ -784,19 +796,19 @@
               submodels: [
                 {
                   name: "TUV300",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#tuv300",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/TUV300/owners-manual-TUV300.html",
                   title: "TUV300 Owner Manual",
                 },
                 {
                   name: "TUV300 Plus",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#tuv300-plus",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/TUV300%2B/index.html",
                   title: "TUV300 Plus Owner Manual",
                 },
               ],
             },
             {
               name: "NuvoSport",
-              url: "https://www.withyouhamesha.com/owners-manual.aspx#nuvosport",
+              url: "https://owner-manual.withyouhamesha.com/manuals/NuvoSport/owners-manual-NuvoSport.html",
               title: "NuvoSport Owner Manual",
             },
           ],
@@ -811,12 +823,12 @@
               submodels: [
                 {
                   name: "e2o Plus P8",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#e2o-plus-p8",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/e2o-plus-p8/owners-manual-e2o-plus-p8.html",
                   title: "e2o Plus P8 Owner Manual",
                 },
                 {
                   name: "e2o P2, P4,P6",
-                  url: "https://www.withyouhamesha.com/owners-manual.aspx#e2o-p2-p4-p6",
+                  url: "https://owner-manual.withyouhamesha.com/manuals/e2o-p2-p4-p6/owners-manual-e2o-p2-p4-p6.html",
                   title: "e2o P2, P4,P6 Owner Manual",
                 },
               ],
